--- a/src/app/componenents/items-view/items-view.component.html
+++ b/src/app/componenents/items-view/items-view.component.html
@@ -1,31 +1,48 @@
-<div class="page-wrapper">
-  <div class="toolbar">
-    <mat-button-toggle-group (change)="changeView($event)" [value]="viewMode">
-      <mat-button-toggle value="table"><mat-icon>view_list</mat-icon></mat-button-toggle>
-      <mat-button-toggle value="tile"><mat-icon>view_module</mat-icon></mat-button-toggle>
-    </mat-button-toggle-group>
+<mat-sidenav-container class="page-wrapper">
 
-    <form class="search-form">
-      <input type="text" name="filter" placeholder="Find by name..." [ngModel]="filter()" (ngModelChange)="filter.set($event)"/>
-    </form>
-  </div>
+  <mat-sidenav
+    #sidenav
+    position="end" mode="over" [opened]="false"
+    [fixedInViewport]="false" [fixedTopGap]="0"
+    [fixedBottomGap]="0">
+    <app-edit-item (close)="sidenav.toggle(false)"/>
+  </mat-sidenav>
+  <mat-sidenav-content>
 
-  <div class="content">
-    @if (viewMode === 'table') {
-      <app-items-table [itemsList]="displayItems() || []"></app-items-table>
-    }
-    @else {
-      <app-items-tile [itemsList]="displayItems() || []"></app-items-tile>
-    }
-  </div>
+  <div class="page-wrapper">
+    <div class="toolbar">
+      <form class="search-form">
+        <input type="text" name="filter" placeholder="Find by name..." [ngModel]="filter()" (ngModelChange)="filter.set($event)"/>
+      </form>
+      <div class="items-toolbar">
+        <button mat-icon-button matTooltip="Add new item" (click)="sidenav.toggle()">
+          <mat-icon>add</mat-icon>
+        </button>
+        <mat-button-toggle-group (change)="changeView($event)" [value]="viewMode">
+          <mat-button-toggle value="table"><mat-icon>view_list</mat-icon></mat-button-toggle>
+          <mat-button-toggle value="tile"><mat-icon>view_module</mat-icon></mat-button-toggle>
+        </mat-button-toggle-group>
+      </div>
+    </div>
 
-  <div class="footer">
-    <mat-paginator
-      [length]="displayItems().length"
-      [pageSize]="pagination().pageSize"
-      [pageSizeOptions]="[5, 10, 25, 100]"
-      (page)="setPagination($event)"
-      aria-label="Select page">
-    </mat-paginator>
+    <div class="content">
+      @if (viewMode === 'table') {
+        <app-items-table [itemsList]="displayItems() || []"></app-items-table>
+      }
+      @else {
+        <app-items-tile [itemsList]="displayItems() || []"></app-items-tile>
+      }
+    </div>
+
+    <div class="footer">
+      <mat-paginator
+        [length]="displayItems().length"
+        [pageSize]="pagination().pageSize"
+        [pageSizeOptions]="[5, 10, 25, 100]"
+        (page)="setPagination($event)"
+        aria-label="Select page">
+      </mat-paginator>
+    </div>
   </div>
-</div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
