--- a/src/app/componenents/items-table/items-table.component.html
+++ b/src/app/componenents/items-table/items-table.component.html
@@ -25,6 +25,15 @@
     <td mat-cell *matCellDef="let element"> {{element.createdBy}} </td>
   </ng-container>
 
+  <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef> Edit </th>
+    <td mat-cell *matCellDef="let element">
+      <button mat-icon-button title="edit" color="accent" (click)="onEditItem(element)">
+        <mat-icon>edit</mat-icon>
+      </button>
+    </td>
+  </ng-container>
+
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
