--- a/src/app/componenents/edit-item/edit-item.component.html
+++ b/src/app/componenents/edit-item/edit-item.component.html
@@ -14,10 +14,7 @@
 
     <mat-form-field>
       <mat-label>Color</mat-label>
-      <mat-select formControlName="color">
-        <mat-option value="one">First option</mat-option>
-        <mat-option value="two">Second option</mat-option>
-      </mat-select>
+        <input type="color" matInput placeholder="chose a color" formControlName="color">
     </mat-form-field>
 
     <mat-form-field class="full-width">
