--- a/src/app/componenents/items-table/items-table.component.html
+++ b/src/app/componenents/items-table/items-table.component.html
@@ -2,7 +2,11 @@
 
   <ng-container matColumnDef="color">
     <th mat-header-cell *matHeaderCellDef> Color </th>
-    <td mat-cell *matCellDef="let element"> {{element.color}} </td>
+    <td mat-cell *matCellDef="let element">
+      <div class="color-cell">
+        <button mat-fab extended [style.background-color]="element.color">&nbsp;&nbsp;&nbsp;&nbsp;</button>
+      </div>
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="name">
