--- a/src/app/componenents/items-view/items-view.component.html
+++ b/src/app/componenents/items-view/items-view.component.html
@@ -33,7 +33,7 @@
         <app-items-table [itemsList]="displayItems() || []" (editItem)="onEditItem($event)"></app-items-table>
       }
       @else {
-        <app-items-tile [itemsList]="displayItems() || []"></app-items-tile>
+        <app-items-tile [itemsList]="displayItems() || []" (editItem)="onEditItem($event)"></app-items-tile>
       }
     </div>
 
