--- a/src/app/componenents/items-tile/items-tile.component.html
+++ b/src/app/componenents/items-tile/items-tile.component.html
@@ -1,16 +1,25 @@
-  <mat-grid-list [cols]="5">
+  <mat-grid-list [cols]="breakpoint" (window:resize)="onResize($event)" rowHeight="1:1.2" gutterSize="16px">
     @for (item of itemsList(); track item.id; let i = $index) {
       <mat-grid-tile>
         <mat-card appearance="raised" class="grid-card">
           <mat-card-header>
-            <mat-card-title>{{ item.color }}</mat-card-title>
-            <mat-card-subtitle>Created By {{ item.createdBy }}</mat-card-subtitle>
-            <mat-card-subtitle>Created Date {{ item.createdAt | date : 'dd/MM/yy' }}</mat-card-subtitle>
-            <mat-card-subtitle>Update Date {{ item.updatedAt | date : 'dd/MM/yy' }}</mat-card-subtitle>
+            <mat-card-title>
+              <div>
+                <button mat-fab extended [style.background-color]="item.color">&nbsp;&nbsp;&nbsp;&nbsp;</button>
+              </div>
+            </mat-card-title>
+            <mat-card-subtitle>{{ item.name }}</mat-card-subtitle>
           </mat-card-header>
           <mat-card-content>
-            <p>{{ item.name }}</p>
+            <p>Created By {{ item.createdBy }}.</p>
+            <p>At {{ item.createdAt | date : 'dd/MM/yy' }}.</p>
+            <p>Updated {{ item.updatedAt | date : 'dd/MM/yy' }}.</p>
           </mat-card-content>
+          <mat-card-actions>
+            <button mat-icon-button title="edit" color="accent" (click)="onEditItem(item)">
+              <mat-icon>edit</mat-icon>
+            </button>
+          </mat-card-actions>
         </mat-card>
       </mat-grid-tile>
     }
